<resources>
    <string name="app_name">GoGAGA</string>
    <string name="age_descrp">Age range preference allows us to suggest matches accordingly.Some matched may fall outside the specified range.</string>
    <string name="interested_in">Interested In</string>
    <string name="alerts_descrptn">We strongly recommend to keep the notifications ON. You don\'t want to miss a chat notification from your match.</string>
    <string name="hide_my_profile">Hide My Profile</string>
    <string name="matchnaker">Here to only help friends? Just hide your profile and be a match-maker</string>
    <string name="whitelist_my_app">Whitelist my app</string>
    <string name="go">GO</string>
    <string name="matchmaker_only_mode">Matchmaker-Only Mode</string>
    <string name="noti">Get notification continuously by whitelisting our app from battery optimisation</string>
    <string name="sound">Sound</string>
    <string name="alerts">Alerts</string>
    <string name="pick_your_gender_preference">Pick your gender preference</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="_70_years">70 years</string>
    <string name="_18">18 -</string>
    <string name="age">Age</string>
</resources>
